--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -88,7 +88,7 @@ jobs:
           rm -rf kernel_workspace
           mkdir kernel_workspace
 
-      - name: 载入当前版本内核的 ccache缓存
+      - name: Restore ccache for ${{ env.CONFIG }}
         uses: actions/cache@v4
         id: ccache-restore
         with:
