try fast build again

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -98,6 +98,29 @@ jobs:
             ccache-${{ env.CONFIG }}-${{ runner.os }}-
             ccache-${{ env.CONFIG }}-
 
+      - name: Init and config ccache
+        run: |
+          export CCACHE_COMPILERCHECK="none"
+          export CCACHE_BASEDIR="${{ github.workspace }}"
+          export CCACHE_NOHASHDIR="true"
+          export CCACHE_HARDLINK="true"
+          export CCACHE_DIR="${{ env.CCACHE_DIR }}"
+          export CCACHE_MAXSIZE="${{ env.CCACHE_MAXSIZE }}"
+          
+          mkdir -p "$CCACHE_DIR"
+          
+          echo "config ccache size to: $CCACHE_MAXSIZE"
+          ccache -M "$CCACHE_MAXSIZE"
+          ccache -o compression=true
+          
+          echo "ccache original state:"
+          ccache -s
+          
+          if [ "${{ steps.ccache-restore.outputs.cache-hit }}" == 'true' ]; then
+            echo "ccache triggered:"
+            ccache -sv
+          fi
+
       - name: Get Baseband-guard Source
         uses: actions/checkout@v4
         with:
@@ -166,3 +189,10 @@ jobs:
           else
             tools/bazel build --config=fast --lto=thin //common:kernel_aarch64_dist || exit 1
           fi
+
+      - name: upload Ccache debug log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ccache-debug-log
+          path: ${{ github.workspace }}/kernel_workspace/ccache.log
