--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -76,6 +76,7 @@ jobs:
           chmod a+rx ./git-repo/repo
           echo "REPO=$GITHUB_WORKSPACE/./git-repo/repo" >> $GITHUB_ENV
           mkdir -p "$CONFIG"
+          sudo apt-get install -y ccache
 
       - name: Config ccache
         run: |
@@ -185,9 +186,9 @@ jobs:
           cd "$CONFIG"
           echo "Building the kernel..."
           if [ -f "build/build.sh" ]; then
-            LTO=thin BUILD_CONFIG=common/build.config.gki.aarch64 build/build.sh || exit 1
+            LTO=thin CC=ccache BUILD_CONFIG=common/build.config.gki.aarch64 build/build.sh || exit 1
           else
-            tools/bazel build --config=fast --lto=thin //common:kernel_aarch64_dist || exit 1
+            tools/bazel build --sandbox_writable_path=$CCACHE_DIR --config=fast --lto=thin //common:kernel_aarch64_dist || exit 1
           fi
 
       - name: upload Ccache debug log
