--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -92,7 +92,6 @@ jobs:
         with:
           key: gki-kernel-${{ env.CONFIG }}
           max-size: 3G
-          save: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
       - name: Get Baseband-guard Source
         uses: actions/checkout@v4
@@ -158,9 +157,9 @@ jobs:
           cd "$CONFIG"
           echo "Building the kernel..."
           if [ -f "build/build.sh" ]; then
-            LTO=thin CC=ccache BUILD_CONFIG=common/build.config.gki.aarch64 build/build.sh || exit 1
+            LTO=thin CC="ccache clang" BUILD_CONFIG=common/build.config.gki.aarch64 build/build.sh || exit 1
           else
-            tools/bazel build --sandbox_writable_path=$CCACHE_DIR --config=fast --lto=thin //common:kernel_aarch64_dist || exit 1
+            tools/bazel build --disk_cache=/home/runner/.cache/bazel --config=fast --lto=thin //common:kernel_aarch64_dist || exit 1
           fi
 
       - name: upload Ccache debug log
