--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -61,15 +61,18 @@ jobs:
     name: Build Check - ${{ matrix.kernel_config.android_version }} (Kernel ${{ matrix.kernel_config.kernel_version }})
     
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 8192
-          temp-reserve-mb: 2048
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
+      - name: Clean up build environment
+        run: |
+          # pick from https://github.com/cctv18/oppo_oplus_realme_sm8750/blob/test/.github/workflows/fastbuild_6.6.66.yml
+          sudo apt-mark hold firefox
+          sudo apt-mark hold libc-bin
+          sudo apt purge man-db
+          sudo rm -rf /var/lib/man-db/auto-update
+          # pick from https://github.com/easimon/maximize-build-space/blob/master/action.yml
+          sudo docker image prune --all --force
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
 
       - name: Set CONFIG Environment Variable
         run: |
